--- a/cap03/projeto/curiosidades.html
+++ b/cap03/projeto/curiosidades.html
@@ -8,6 +8,63 @@
 <meta charset="utf-8">
 
 <title>Meu amigo cão - Petshop</title>
+<style>
+    h2{
+        background-color: #c0262c;
+        background-image: url(multimidia/importante-saber.jpg),url(multimidia/back-bolinha.gif);
+        background-repeat: no-repeat, repeat;
+        background-position: center right, center center;
+        width: 470px;
+        padding: 61px 400px 61px 100px;
+        font-size: 2.5em;
+        letter-spacing: .1em;
+        color: #FFFFFF;
+    }
+    figure{
+        border: #c0262c solid thin;
+        border-radius: 35px 35px 0 0;
+        padding: 20px 0 0;
+        text-align: center;
+    }
+    ul li{
+        list-style-type: none;
+        list-style-image: url(multimidia/ossinho.png);
+        list-style-position: inside;
+        margin: 30px 0;
+    }
+    dt{
+        color: #fff;
+        background-color: #c0262c;
+        padding: 7px;
+    }
+    dd{
+        border: thin #c0262c solid;
+        border-radius: 0 0 25px 25px;
+        margin-top: -3px;
+        margin-bottom: 30px;
+        padding: 20px 20px 0;
+    }
+    ol{
+        list-style-type: none;
+        white-space: pre;
+        line-height: .9em;
+        /* Definir a variavel de contagem*/
+        counter-reset: contador;
+    }
+    ol li:before{
+        color: #999999;
+        /* incrementando a váriavel em 1*/
+        counter-increment: contador;
+        /* usar o numero do contador como conteudo*/
+        content: "Questão" counter(contador) "\00BB";
+    }
+    figcaption{
+        background-color: #c0262c;
+        padding: 7px 0;
+        color: #FFFFFF;
+        font-size: 1.5em;
+    }
+</style>
 
 </head>
 
@@ -131,7 +188,8 @@ Antigamente esta raça era considerada um gladiador feroz, agora é vista como u
 <p> <a href="#top"> Voltar </a> </p>
 
 
-</dd>
+
+</dd>
 
 
 <dt><a id="collie"></a>Collie</dt>
