--- a/cap03/projeto/curiosidades.html
+++ b/cap03/projeto/curiosidades.html
@@ -58,6 +58,9 @@
         /* usar o numero do contador como conteudo*/
         content: "Questão" counter(contador) "\00BB";
     }
+    ul li a{
+        text-decoration: ;
+    }
     figcaption{
         background-color: #c0262c;
         padding: 7px 0;
