--- a/cap03/projeto/curiosidades.html
+++ b/cap03/projeto/curiosidades.html
@@ -8,6 +8,7 @@
 <meta charset="utf-8">
 
 <title>Meu amigo cão - Petshop</title>
+<link rel="stylesheet" href="Estilo.css" rel="stylesheet" type="text/css">
 <style>
     h2{
         background-color: #c0262c;
@@ -59,7 +60,34 @@
         content: "Questão" counter(contador) "\00BB";
     }
     ul li a{
-        text-decoration: ;
+        text-decoration: none;
+        color: #c0262c;
+        font-weight: bold;
+        padding: 7px;
+    }
+    ul li a:hover {
+        text-decoration: underline;
+    }
+    dd a [target="_blank"] {
+        text-decoration: none;
+        color: #c0262c;
+        font-weight: bold;
+        padding: 7px;
+        display: inline-block;
+    }
+    dd a[target="blank"]:hover {
+        text-decoration: underline;
+    }
+    dd a[href="#top"] {
+        text-decoration: none;
+        color: #c0262c;
+        font-weight: bold;
+        padding: 7px 0 7px 30px;
+        background: url(multimidia/seta-voltar.png) no-repeat left center;
+    }
+    dd a[href="#top"]:hover {
+        text-decoration: underline;
+        background: url(multimidia/seta-voltar-hover.png) no-repeat left center;
     }
     figcaption{
         background-color: #c0262c;
