--- a/cap03/projeto/boletim.html
+++ b/cap03/projeto/boletim.html
@@ -7,6 +7,7 @@
 <meta charset="utf-8">
 
 <title>Boletim Mensal - Meu amigo cão</title>
+<script src="interacao/html5shiv.min.js"></script>
 
 </head>
 
@@ -29,6 +30,11 @@ você receberá mensalmente informações sobre nossos produtos, serviços, even
 
 <p><label for="email">Email:</label> <input type="email" name="email" id="email" placeholder="Digite seu endereço de email" size="30"></p>
 
+<footer>
+    <p>
+        Atendimento: atendimento@seuamigocaopetshop.com • (0XX) 999999-9999/(0XX) 888888-8888
+    </p>
+</footer>
 
 <input type="submit" value="Enviar">
 
