--- a/cap03/projeto/index.html
+++ b/cap03/projeto/index.html
@@ -13,12 +13,25 @@
 
 
 <body>
+    <header>
+
 
 <h1>Meu amigo cão - Petshop</h1>
-
-
-<p><a href="boletim.html">Assine o boletim mensal</a></p>
-
+<img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="">
+<section>
+    <p><a href="boletim.html">Assine o boletim mensal</a></p>
+    <p>Nos Acompanhe:</p>
+    <figure>
+    <a href=""><img src="multimidia/ms-facebook.gif" alt=""></a>
+    <a href=""><img src="multimidia/ms-twitter.gif" alt=""></a>
+    <a href=""><img src="multimidia/ms-youtube.gif" alt=""></a>
+    <a href=""><img src="multimidia/ms-pinterest.gif" alt=""></a>
+    <a href=""><img src="multimidia/ms-gmais.gif" alt=""></a>
+    </figure>
+</section>
+</header>
+<nav>
+    <br>
 
 <ul>
 
@@ -32,13 +45,27 @@
 
 <li><a href="curiosidades.html">Curiosidades</a></li>
 </ul>
+</nav>
+<aside>
+    <img src="multimidia/anuncio_pet1.jpg" alt="">
+</aside>
 
+<main>
+    <img src="multimidia/anime-index.jpg" alt="">
+    <h1>O melhor para o nosso amigo cão</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ullam ipsum rem odio sunt ab consectetur laboriosam asperiores provident, voluptatem tempora aliquid adipisci et itaque dignissimos corrupti necessitatibus nisi praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam enim vitae ad praesentium? Consequuntur architecto laudantium ea incidunt. Voluptatibus molestias earum dignissimos tempora similique quaerat molestiae explicabo? Recusandae, nihil hic. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ipsam nisi ea deleniti cumque facere aliquam at id earum alias eius impedit, adipisci architecto repudiandae tempora corrupti. Ducimus, maxime ipsam!</p>
+</main>
 
+<aside>
+    <img src="multimidia/anuncio_pet2.jpg" alt="">
+</aside>
+
+<footer>
 <p>Atendimento: 
 <a href="mailto:atendimento@meuamigocaopetshop.com">
 atendimento@meuamigocaopetshop.com</a>  
  - (0XX) 99999-9999 / (0XX) 88888-8888</p>
-
+</footer>
 
 </body>
 
