--- a/cap03/projeto/obrigado.html
+++ b/cap03/projeto/obrigado.html
@@ -7,13 +7,16 @@
 <meta charset="utf-8">
 
 <title>Obrigado - Meu amigo cão</title>
+<script src="interacao/html5shiv.min.js"></script>
 
 
 </head>
 
 
 
-<body> 
+<body>
+    <main>
+     
 
 
 
@@ -29,10 +32,20 @@
 
 <p>Nossa equipe irá conferir sua solicitação e enviará uma confirmação para seu email.</p>
 
-
 <p>&nbsp;</p>
+<p>...enviará uma confimação pra seu email.</p> 
+</main>
+<p>Aproveite agora mesmo a nossa dica em destaque:</p>
+<p><img src="multimidia/anuncio_pet3.jpg" alt="Um filhote de cachorro com a pata em cima de um presente vermelho">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur tempore animi facilis porro dolore libero delectus est aliquid sed at blanditiis eius ab reprehenderit, nam iure optio quisquam aperiam eos.<br><br>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, qui pariatur. Corrupti a est laboriosam officiis repellendus similique omnis praesentium, quasi quaerat magnam nobis dolores ea asperiores quod, rerum recusandae.<br><br>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nemo sunt nesciunt dignissimos quod quae inventore possimus error, quas praesentium deserunt quam, tempore autem rerum perspiciatis blanditiis numquam esse repellat!
+</p>
 
-
+<footer>
+    <p>
+        Atendimento: atendimento@seuamigocaopetshop.com • (0XX) 999999-9999/(0XX) 888888-8888
+    </p>
+</footer>
 </body>
 
 
