--- a/cap03/projeto/quem-somos.html
+++ b/cap03/projeto/quem-somos.html
@@ -8,6 +8,9 @@
 	<meta charset="utf-8">
 
 	<title>Quem somos - Meu amigo cão</title>
+	<link rel="stylesheet" href="estilos/principal.css" rel="stylesheet" type="text/css">
+
+	<script src="interacao/html5shiv.min.js"></script>
 	<link rel="stylesheet" href="Estilo.css">
 
 </head>
