--- a/cap03/projeto/banho-e-tosa.html
+++ b/cap03/projeto/banho-e-tosa.html
@@ -1,6 +1,7 @@
 ﻿<!doctype html>
 <html lang="pt-br">
 <head>
+    <script src="interacao/html5shiv.min.js"></script>
 <meta charset="utf-8">
 <title>Meu amigo cão</title>
 </head>
