--- a/cap03/projeto/produtos.html
+++ b/cap03/projeto/produtos.html
@@ -10,15 +10,15 @@
 <title>Produtos - Meu amigo cão</title>
 <script src="interacao/html5shiv.min.js"></script>
 
-
+<link rel="stylesheet" href="Estilo.css" rel="stylesheet" type="text/css">
 </head>
 
 
-<body>
+<body id="produtos">
 
 <p><a href="index.html">Home</a></p>
 
-<table border="1">
+<table>
 
 <caption>Produtos</caption>
 
