--- a/cap03/projeto/banho-e-tosa.html
+++ b/cap03/projeto/banho-e-tosa.html
@@ -4,9 +4,11 @@
     <script src="interacao/html5shiv.min.js"></script>
 <meta charset="utf-8">
 <title>Meu amigo cão</title>
+<link rel="stylesheet" href="Estilo.css" type="text/css">
+
 </head>
 
-<body>
+<body id="banhoEtosa">
 <a href="index.html">Home</a>
 <h1> Agendamento para banho e tosa </h1>
 <h2> Faça o seu agendamento com pelo menos 48 horas de antecedência</h2>
