--- a/cap03/projeto/boletim.html
+++ b/cap03/projeto/boletim.html
@@ -8,10 +8,11 @@
 
 <title>Boletim Mensal - Meu amigo cão</title>
 <script src="interacao/html5shiv.min.js"></script>
+<link rel="stylesheet" href="Estilo.css" type="text/css">
 
 </head>
 
-<body>
+<body id="boletim-f">
 
 <h1>Meu amigo cão - Petshop</h1>
 
