--- a/cap03/projeto/index.html
+++ b/cap03/projeto/index.html
@@ -9,16 +9,19 @@
 
 <title>Meu amigo cão - Petshop</title>
 <script src="interacao/html5shiv.min.js"></script>
+<link rel="stylesheet" href="Estilo.css" type="text/css">
 
 </head>
 
 
-<body>
+<body id="inicial">
     <header>
-
+<div id="anuncio">
 
 <h1>Meu amigo cão - Petshop</h1>
 <img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="">
+</div>
+
 <section>
     <p><a href="boletim.html">Assine o boletim mensal</a></p>
     <p>Nos Acompanhe:</p>
